
# $Id$
#
# Copyright (C) 2004  The Xastir Group
#

AUTOMAKE_OPTIONS = gnu dist-bzip2
ACLOCAL_AMFLAGS = -I m4

D=      `date +%G%m%d.%H%M%S`

SUBDIRS = src

# Remove this file here (it is created via configure), not from within intl.
# DISTCLEANFILES =

EXTRA_DIST = config.guess config-ml.in config.sub install-sh \
        missing mkinstalldirs README bootstrap.sh

MAINTAINERCLEANFILES = configure aclocal.m4 Makefile.in Makefile \
        config.guess config.sub install-sh missing mkinstalldirs

docdir=${pkgdatadir}/doc
#doc_DATA=AUTHORS FAQ ChangeLog LICENSE README README.CVS \
#        README.MAPS README.win32 COPYING INSTALL UPGRADE

mandir=${prefix}/man
#man_MANS=xastir.1

ChangeLog::


