
# $Id$
# Copyright (C) 2004-2005  The Xastir Group

noinst_LIBRARIES=librtree.a
librtree_a_SOURCES=index.c \
                 index.h \
                 rect.c \
                 rect.h \
                 node.c \
                 node.h \
                 card.c \
                 card.h \
                 split_l.c \
                 split_l.h 
