
# Copyright (C) 2000-2019 The Xastir Group

noinst_LIBRARIES=librtree.a

librtree_a_SOURCES= card.c \
                    card.h \
                    index.c \
                    index.h \
                    node.c \
                    rect.c \
                    split_l.c \
                    split_l.h 

